--- a/color_picker.html
+++ b/color_picker.html
@@ -16,13 +16,16 @@
 		}
 		$(document).ready(function(){
 			$('#large_box').click(function(){
-				alert('you clicked the big box!')  //comment this out when you figure out what event.stopPropagation is used for!
+				$(this).css("background-color", "red");
+				$(this).children().css("background-color", "purple");
 			})
 			$('.side_box').click(function(event){
 				event.stopPropagation();
+				$(this).siblings().css("background-color", "green");
 			})
 			$('.middle_box').click(function(event){
 				event.stopPropagation();
+				$(this).parent().css("background-color", "orange");
 			})
 		});
 	</script>
